# main.go
@@ -20,7 +20,7 @@ func main() {
 
 	r := gin.Default()
 
-	r.POST("/bot", api.GetBotResponse)
+	r.POST("/agents/:agentId/channels/:channelId/getReply", api.GetBotResponse)
 	r.GET("/ip", api.GetPublicIp)
 	r.GET("/count", api.CountAllRecord)
 	r.POST("/top", api.TopIntent)
@@ -30,7 +30,7 @@ func main() {
 	r.StaticFile("/v2/swagger.json", "./docs/swagger.json")
 	r.StaticFile("/docs", "./templates/redoc.html")
 
-	println("Documentation served at http://127.0.0.1:8000/docs")
+	fmt.Println("Documentation served at http://127.0.0.1:8000/docs")
 	cron.UpdateCacheCron() //启动定时任务
 	panic(r.Run(":8000"))
 }
